--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ jsonschema-specifications==2025.4.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kaggle==1.7.4.5
-kiwisolver==1.4.8
+kiwisolver
 MarkupSafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
