--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ matplotlib-inline
 narwhals==1.39.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
-numpy==2.2.5
+numpy
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
