--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-slugify==8.0.4
 pytz==2025.2
-pywin32==310
+pywin32
 pyzmq==26.4.0
 referencing==0.36.2
 requests==2.32.3
