--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ referencing==0.36.2
 requests==2.32.3
 rpds-py==0.24.0
 scikit-learn==1.6.1
-scipy==1.15.3
+scipy
 seaborn==0.13.2
 setuptools==80.4.0
 six==1.17.0
